# Ride-Allocation-System

./: .gitignore  CMakeLists.txt  main.cpp
src/: SystemManager.cpp  SystemManager.h
src/core/: ActiveRide.h  Driver.cpp  Driver.h  Map.cpp  Map.h  MatchEngine.cpp  MatchEngine.h  RegionQueue.cpp  RegionQueue.h  RideRequest.cpp  RideRequest.h  SpatialIndex.cpp  SpatialIndex.h
